--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
-layout: home
+layout: single
 author_profile: true
 ---
+
+
+Welcome to my site. See my contact info on the sidebar. While you're here, check out any of the links up top.
